# game-engine

./: CMakeLists.txt  README.md
code/: CMakeLists.txt
code/core/: CMakeLists.txt  public.hpp
code/core/base/: singleton.hpp  vertex_attribute.hpp  window_config.hpp  window_size.hpp  window_state.hpp
code/core/core/: CMakeLists.txt  file.cpp  file.hpp  geometry.hpp  private.hpp  public.hpp  rgb.hpp  time.cpp  time.hpp  vertex.hpp  vertex_attribute.hpp
code/core/core/vertex/: attribute.hpp
code/core/core/window/: config.hpp  size.hpp  state.hpp
code/core/data/: camera.hpp  geometry.hpp
code/core/math/: CMakeLists.txt  mat4.cpp  mat4.hpp
code/graphics/: CMakeLists.txt
code/graphics/base/: buffer_data.hpp
code/graphics/core/: CMakeLists.txt  buffer_data.cpp  buffer_data.hpp  buffer_location.hpp
code/graphics/opengl/: CMakeLists.txt  buffer.cpp  buffer.hpp  commands.cpp  commands.hpp  functions.cpp  functions.hpp  macros.hpp  object.hpp  shader.cpp  shader.hpp  shader_stage.cpp  shader_stage.hpp  typedefs.hpp  vertex_array.cpp  vertex_array.hpp
code/platform/: CMakeLists.txt  platform_factory.cpp  platform_factory.hpp  public.hpp  window.cpp  window.hpp  window_factory.cpp  window_factory.hpp  window_instance.cpp  window_instance.hpp  window_manager.cpp  window_manager.hpp
code/platform/base/: context.hpp  factory.hpp  platform.hpp  window.hpp  window_events.hpp
code/platform/core/: CMakeLists.txt  input_manager.cpp  input_manager.hpp  window_factory.cpp  window_factory.hpp  window_manager.cpp  window_manager.hpp
code/platform/glfw/: CMakeLists.txt  context.cpp  context.hpp  factory.cpp  factory.hpp  platform.cpp  platform.hpp  private.hpp  window.cpp  window.hpp  window_events.cpp  window_events.hpp
code/platform/win32/: CMakeLists.txt  context.cpp  context.hpp  macros.hpp  window.cpp  window.hpp  window_events.cpp
code/platform/windows/: CMakeLists.txt  context.cpp  context.hpp  factory.cpp  factory.hpp  platform.cpp  platform.hpp  window.cpp  window.hpp  window_events.cpp  window_events.hpp
libraries/: CMakeLists.txt
libraries/glad/: CMakeLists.txt  glad.c  glad.cpp
libraries/glad/include/KHR/: khrplatform.h
libraries/glad/include/glad/: glad.h
libraries/glfw/: CMakeLists.txt  README.md  context.c  init.c  input.c  internal.h  monitor.c  platform.c  platform.h  wgl_context.c  win32_init.c  win32_monitor.c  win32_platform.h  win32_thread.c  win32_thread.h  win32_time.c  win32_window.c  window.c
libraries/glfw/examples/: CMakeLists.txt  triangle-opengl.c
libraries/glfw/include/GLFW/: glfw3.h  glfw3native.h
libraries/glfw/include/glfw/: glfw3.h  glfw3native.h
libraries/glfw/src/: CMakeLists.txt  context.c  init.c  input.c  internal.h  platform.c  platform.h  wgl_context.c  win32_init.c  win32_platform.h  win32_window.c  window.c
libraries/glfw/tests/: CMakeLists.txt
