#=======================================================================================================================
add_subdirectory(graphics)
add_subdirectory(platform)
#=======================================================================================================================
add_subdirectory(core)
#=======================================================================================================================