#=======================================================================================================================
project(engine_graphics)
#=======================================================================================================================
add_library(${PROJECT_NAME})
#=======================================================================================================================
add_subdirectory(core)
add_subdirectory(opengl)
#=======================================================================================================================
target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_precompile_headers(${PROJECT_NAME}  PUBLIC public.hpp)
#=======================================================================================================================