#=======================================================================================================================
project(engine_graphics)
#=======================================================================================================================
add_library(${PROJECT_NAME})
#=======================================================================================================================
target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
#=======================================================================================================================
add_subdirectory(opengl)
add_subdirectory(vulkan)
#=======================================================================================================================
add_subdirectory(core)
#=======================================================================================================================