#=======================================================================================================================
project(engine_graphics)
#=======================================================================================================================
add_subdirectory(core)
#=======================================================================================================================
add_subdirectory(opengl)
add_subdirectory(vulkan)
#=======================================================================================================================