#=======================================================================================================================
project(engine_platform)
#=======================================================================================================================
add_library(${PROJECT_NAME})
#=======================================================================================================================
target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_precompile_headers(${PROJECT_NAME}  PUBLIC public.hpp)
#=======================================================================================================================
add_subdirectory(core)
#=======================================================================================================================
add_subdirectory(win32)
add_subdirectory(linux)
#=======================================================================================================================