#=======================================================================================================================
project(engine_platform)
#=======================================================================================================================
add_library(${PROJECT_NAME})
#=======================================================================================================================
target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
#=======================================================================================================================
add_subdirectory(win32)
add_subdirectory(linux)
#=======================================================================================================================
add_subdirectory(core)
#=======================================================================================================================