#=======================================================================================================================
project(engine_platform)
#=======================================================================================================================
add_subdirectory(core)
#=======================================================================================================================
add_subdirectory(win32)
add_subdirectory(linux)
#=======================================================================================================================