#=======================================================================================================================
target_link_libraries(${PROJECT_NAME} PRIVATE engine_core)
target_sources(${PROJECT_NAME}        PRIVATE buffer_data.cpp)
#=======================================================================================================================